<resources>
    <string name="app_name">Revivify3</string>
    <string name="fix_photos">Fix Photos</string>
    <string name="edit_image">Edit Image</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="check">Finalize</string>
    <string name="cross">Cancel</string>
    <string name="contrast">adjust_contrast</string>
    <string name="exposure">adjust_exposure</string>
    <string name="saturation">adjust_saturation</string>
    <string name="sharpen">adjust_sharpness</string>
    <string name="tick">tick</string>
    <string name="cross_btn">cross_btn</string>
    <string name="warmth">warmth</string>
    <string name="brightness">brightness</string>
    <string name="edit_image_btn">Edit Image</string>
    <string name="placeholder">placeholder</string>
    <string name="finalize_result">Finalize Result</string>
</resources>